<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAlfabeto"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ButtonAlfabeto"
            android:textColor="#fff"
            android:textSize="25dp" />

        <Button
            android:id="@+id/buttonNumerais"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ButtonNumerais"
            android:textColor="#fff"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <Button
            android:id="@+id/buttonDicionario"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ButtonDicionario"
            android:textColor="#fff"
            android:textSize="25dp" />

        <Button
            android:id="@+id/buttonQuiz"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ButtonQuiz"
            android:textColor="#fff"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonInstrucoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ButtonInstrucoes"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>